--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,21 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag willmitchell/netcorewa3:$(date +%s)
+        
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+        
+      - name: Push the Docker image
+        run: docker push willmitchell/netcorewa3:$(date +%s)
+        
+#      - name: Deploy to Azure
+#        uses: azure/webapps-deploy@v2
+#        with:
+#          app-name: netcorewa3
+#          publish-profile: ${{ secrets.AzureAppService_PublishProfile_6b9b4b9c1c1c4c3c9b9b4b9c1c1c4c3c }}
+#          package: willmitchell/netcorewa3:$(date +%s)
+      
+      
