--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag willmitchell/netcorewa3:$(date +%s)
+        run: docker build . --file Dockerfile --tag willmitchell/netcorewa3:latest
         
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -24,7 +24,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
         
       - name: Push the Docker image
-        run: docker push willmitchell/netcorewa3:$(date +%s)
+        run: docker push willmitchell/netcorewa3:latest
         
 #      - name: Deploy to Azure
 #        uses: azure/webapps-deploy@v2
