Alter base, force static build because WSC is 5GB but still no dotnet sdk onboard.

--- a/netcorewa3.csproj
+++ b/netcorewa3.csproj
@@ -5,11 +5,12 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-        
+        <UserSecretsId>22a5eff4-d7b4-4fef-bd46-0504d52113e3</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        
     </ItemGroup>
 
 </Project>
