--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,15 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  
+  build-windows:
 
     runs-on: windows-latest
+
+    env:
+      IMAGE_NAME: willmitchell/netcorewa3
 
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag willmitchell/netcorewa3:latest
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME:latest
         
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -24,13 +27,26 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
         
       - name: Push the Docker image
-        run: docker push willmitchell/netcorewa3:latest
+        run: docker push $IMAGE_NAME:latest
+
+  build-linux:
+
+    runs-on: ubuntu-latest
+    
+    env:
+      IMAGE_NAME: willmitchell/netcorewa3-linux
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile.linux --tag $IMAGE_NAME:latest
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push the Docker image
+        run: docker push $IMAGE_NAME:latest
         
-#      - name: Deploy to Azure
-#        uses: azure/webapps-deploy@v2
-#        with:
-#          app-name: netcorewa3
-#          publish-profile: ${{ secrets.AzureAppService_PublishProfile_6b9b4b9c1c1c4c3c9b9b4b9c1c1c4c3c }}
-#          package: willmitchell/netcorewa3:$(date +%s)
-      
-      
