--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+env:
+  VERSION: 0.2.0
 
 jobs:
   
@@ -18,7 +21,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME:latest
+        # use pwsh syntax
+        run: |
+          docker build `
+            --file Dockerfile `
+            --tag $env:IMAGE_NAME:latest `
+            --tag $env:IMAGE_NAME:${{ github.sha }} `
+            --build-arg BUILD_DATE=$(Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ") `
+            --build-arg VCS_REF=${{ github.sha }} `
+            --build-arg VERSION=${{ env.VERSION }} .
+            .
         
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -27,7 +39,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
         
       - name: Push the Docker image
-        run: docker push $IMAGE_NAME:latest
+        run: |
+          docker push $env:IMAGE_NAME:latest
+          docker push $env:IMAGE_NAME:${{ github.sha }}
 
   build-linux:
 
@@ -38,8 +52,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile.linux --tag $IMAGE_NAME:latest
+      - name: Build the Docker image        
+        run: |
+          docker build \
+            --file Dockerfile.linux \
+            --tag $IMAGE_NAME:latest \
+            --tag $IMAGE_NAME:${{ github.sha }} \
+            --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
+            --build-arg VCS_REF=${{ github.sha }} \
+            --build-arg VERSION=${{ env.VERSION }} .
+            .        
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -48,5 +70,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push the Docker image
-        run: docker push $IMAGE_NAME:latest
-        
+        run: |
+          docker push $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:${{ github.sha }}
+
