--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,8 +39,8 @@ jobs:
         
       - name: Push the Docker image
         run: |
-          docker push $env:IMAGE_NAME:latest
-          docker push $env:IMAGE_NAME:${{ github.sha }}
+          docker push "${env:IMAGE_NAME}:latest"
+          docker push "${env:IMAGE_NAME}:${{ github.sha }}"
 
   build-linux:
 
