--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,17 +30,14 @@ jobs:
             --build-arg BUILD_DATE=$(Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ") `
             --build-arg VCS_REF=${{ github.sha }} `
             --build-arg VERSION=${{ env.VERSION }} .
-        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+
+      - name: Push image to ghcr.io
+        uses: docker/build-push-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-        
-      - name: Push the Docker image
-        run: |
-          docker push "${env:IMAGE_NAME}:latest"
-          docker push "${env:IMAGE_NAME}:${{ github.sha }}"
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}  
 
   build-linux:
 
@@ -61,14 +58,22 @@ jobs:
             --build-arg VCS_REF=${{ github.sha }} \
             --build-arg VERSION=${{ env.VERSION }} .
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Push image to ghcr.io
+        uses: docker/build-push-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push the Docker image
-        run: |
-          docker push $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:${{ github.sha }}
+          context: .
+          file: ./Dockerfile.linux
+          push: true
+          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}
+      
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Push the Docker image
+#        run: |
+#          docker push $IMAGE_NAME:latest
+#          docker push $IMAGE_NAME:${{ github.sha }}
 
