--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,9 @@ on:
     branches: [ "main" ]
     
 env:
-  VERSION: 0.2.0
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+#  VERSION: 0.2.0
 
 jobs:
   
@@ -15,56 +17,79 @@ jobs:
 
     runs-on: windows-latest
 
-    env:
-      IMAGE_NAME: willmitchell/netcorewa3
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Build the Docker image
-        # use pwsh syntax
-        run: |
-          docker build `
-            --file Dockerfile `
-            --tag "${env:IMAGE_NAME}:latest" `
-            --tag "${env:IMAGE_NAME}:${{ github.sha }}" `
-            --build-arg BUILD_DATE=$(Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ") `
-            --build-arg VCS_REF=${{ github.sha }} `
-            --build-arg VERSION=${{ env.VERSION }} .
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Push image to ghcr.io
-        uses: docker/build-push-action@v2
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}  
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          
+#          
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#      
+#      - name: Build the Docker image
+#        run: |
+#          docker build `
+#            --file Dockerfile `
+#            --tag "${env:IMAGE_NAME}:latest" `
+#            --tag "${env:IMAGE_NAME}:${{ github.sha }}" `
+#            --build-arg BUILD_DATE=$(Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ") `
+#            --build-arg VCS_REF=${{ github.sha }} `
+#            --build-arg VERSION=${{ env.VERSION }} .
+#
+#      - name: Push image to ghcr.io
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          push: true
+#          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}  
 
-  build-linux:
-
-    runs-on: ubuntu-latest
-    
-    env:
-      IMAGE_NAME: willmitchell/netcorewa3-linux
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build the Docker image        
-        run: |
-          docker build \
-            --file Dockerfile.linux \
-            --tag $IMAGE_NAME:latest \
-            --tag $IMAGE_NAME:${{ github.sha }} \
-            --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
-            --build-arg VCS_REF=${{ github.sha }} \
-            --build-arg VERSION=${{ env.VERSION }} .
-
-      - name: Push image to ghcr.io
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.linux
-          push: true
-          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}
+#  build-linux:
+#
+#    runs-on: ubuntu-latest
+#    
+#    env:
+#      IMAGE_NAME: willmitchell/netcorewa3-linux
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Build the Docker image        
+#        run: |
+#          docker build \
+#            --file Dockerfile.linux \
+#            --tag $IMAGE_NAME:latest \
+#            --tag $IMAGE_NAME:${{ github.sha }} \
+#            --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
+#            --build-arg VCS_REF=${{ github.sha }} \
+#            --build-arg VERSION=${{ env.VERSION }} .
+#
+#      - name: Push image to ghcr.io
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.linux
+#          push: true
+#          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}
       
 #      - name: Login to DockerHub
 #        uses: docker/login-action@v1
