--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,14 +39,35 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          
+      - name: Build the Docker image
+        run: |
+          docker build `
+            --file Dockerfile `
+            --tag "${env:IMAGE_NAME}:latest" `
+            --tag "${env:IMAGE_NAME}:${{ github.sha }}" `
+            .
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Push the Docker image
+        run: |
+          docker push "${env:IMAGE_NAME}:latest"
+          docker push "${env:IMAGE_NAME}:${{ github.sha }}"
+      
+#      - name: Push image to ghcr.io
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          push: true
+#          tags: ${env:IMAGE_NAME}:latest, ${env:IMAGE_NAME}:${{ github.sha }}            
+
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v3
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
           
 #          
 #      - name: Checkout
