--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-#  VERSION: 0.2.0
 
 jobs:
   
@@ -53,79 +52,38 @@ jobs:
           docker push "$${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
           docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
       
-#      - name: Push image to ghcr.io
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          push: true
-#          tags: ${env:IMAGE_NAME}:latest, ${env:IMAGE_NAME}:${{ github.sha }}            
 
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
-          
-#          
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      
-#      - name: Build the Docker image
-#        run: |
-#          docker build `
-#            --file Dockerfile `
-#            --tag "${env:IMAGE_NAME}:latest" `
-#            --tag "${env:IMAGE_NAME}:${{ github.sha }}" `
-#            --build-arg BUILD_DATE=$(Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ") `
-#            --build-arg VCS_REF=${{ github.sha }} `
-#            --build-arg VERSION=${{ env.VERSION }} .
-#
-#      - name: Push image to ghcr.io
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          push: true
-#          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}  
+  build-linux:
 
-#  build-linux:
-#
-#    runs-on: ubuntu-latest
-#    
-#    env:
-#      IMAGE_NAME: willmitchell/netcorewa3-linux
-#
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Build the Docker image        
-#        run: |
-#          docker build \
-#            --file Dockerfile.linux \
-#            --tag $IMAGE_NAME:latest \
-#            --tag $IMAGE_NAME:${{ github.sha }} \
-#            --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
-#            --build-arg VCS_REF=${{ github.sha }} \
-#            --build-arg VERSION=${{ env.VERSION }} .
-#
-#      - name: Push image to ghcr.io
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./Dockerfile.linux
-#          push: true
-#          tags: $IMAGE_NAME:latest, $IMAGE_NAME:${{ github.sha }}
+    runs-on: ubuntu-latest
+
+    env:
+      IMAGE_NAME: willmitchell/netcorewa3-linux
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx  
+        uses: docker/setup-buildx-action@v2
       
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#
-#      - name: Push the Docker image
-#        run: |
-#          docker push $IMAGE_NAME:latest
-#          docker push $IMAGE_NAME:${{ github.sha }}
-
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        
+      - name: Push image to ghcr.io
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile.linux
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+      
