--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,9 +57,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      IMAGE_NAME: willmitchell/netcorewa3-linux
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -69,9 +66,13 @@ jobs:
 
       - name: Set up Docker Buildx  
         uses: docker/setup-buildx-action@v2
-      
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -79,7 +80,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         
-      - name: Push image to ghcr.io
+      - name: Build and push image to ghcr.io
         uses: docker/build-push-action@v2
         with:
           context: .
