--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,15 +13,15 @@ env:
 jobs:
   
   build-windows:
+    
+    env:
+      FULL_IMAGE_NAME: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-windows
 
     runs-on: windows-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -37,25 +37,28 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ FULL_IMAGE_NAME }}
           
       - name: Build the Docker image
         run: |
           docker build `
             --file Dockerfile `
-            --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" `
-            --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" `
+            --tag "${{ FULL_IMAGE_NAME }}:latest" `
+            --tag "${{ FULL_IMAGE_NAME }}:${{ github.sha }}" `
             .
 
       - name: Push the Docker image
         run: |
-          docker push "$${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
-          docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          docker push "${{ FULL_IMAGE_NAME }}:latest"
+          docker push "${{ FULL_IMAGE_NAME }}:${{ github.sha }}"
       
 
   build-linux:
 
     runs-on: ubuntu-latest
+
+    env:  
+      FULL_IMAGE_NAME: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-linux
 
     steps:
       - name: Checkout repository
@@ -78,7 +81,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ FULL_IMAGE_NAME }}
         
       - name: Build and push image to ghcr.io
         uses: docker/build-push-action@v2
@@ -86,5 +89,5 @@ jobs:
           context: .
           file: ./Dockerfile.linux
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          tags: ${{ FULL_IMAGE_NAME }}:latest, ${{ FULL_IMAGE_NAME }}:${{ github.sha }}
       
