--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,27 +5,27 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  
+
   build-windows:
 
     runs-on: windows-latest
-    
+
     env:
       SUFFIX: "-windows"
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
@@ -38,11 +38,11 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}
-          
+
       - name: Build the Docker image
         run: |
           docker build `
-            --file Dockerfile `
+            --file ./windows/Dockerfile `
             --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:latest" `
             --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:${{ github.sha }}" `
             .
@@ -59,15 +59,15 @@ jobs:
 
     env:
       SUFFIX: "-linux"
-      
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
-      - name: Set up Docker Buildx  
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to the Container registry
@@ -76,18 +76,17 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}
-        
+
       - name: Build and push image to ghcr.io
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile.linux
+          file: ./linux/Dockerfile
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:${{ github.sha }}
-      
