--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,10 +39,13 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}
 
+      - name: Copy Dockerfile into place
+        run: |
+          copy ./windows/Dockerfile . 
+          dir
+
       - name: Build the Docker image
         run: |
-          # verbose copy
-          copy ./windows/Dockerfile . 
           docker build `
             --file Dockerfile `
             --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:latest" `
@@ -85,17 +88,6 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}
 
-      # build for both amd64 and arm64
-#      - name: Build the Docker image
-#        run: |
-#          cp ./linux/Dockerfile ./Dockerfile 
-#          docker buildx build `
-#              --file Dockerfile `
-#              --platform linux/amd64,linux/arm64 `
-#              --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:latest" `
-#              --tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:${{ github.sha }}" `
-#              --push .
-
       - name: Build and push image to ghcr.io
         uses: docker/build-push-action@v2
         with:
@@ -103,4 +95,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           file: ./linux/Dockerfile
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:${{ github.sha }}
+          # add tags for platform (multi arch builds)
+          tags: |
+              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:latest
+              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:${{ github.sha }}
+              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ env.SUFFIX }}:${{ steps.meta.outputs.tags }}
