--- a/netcorewa3.csproj
+++ b/netcorewa3.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <UserSecretsId>22a5eff4-d7b4-4fef-bd46-0504d52113e3</UserSecretsId>
     </PropertyGroup>
 
