--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,30 @@
 # run netcorewa3-linux on the bridge network
 services:
   netcorewa3-linux:
-    image: netcorewa3-linux
+    image: ncwl
     build:
       context: .
       dockerfile: ./linux/Dockerfile
-    container_name: netcorewa3-linux
+      
+    container_name: ncwl
     restart: always
-    network_mode: host
+    network_mode: bridge
     ports:
       - 5000:80
     volumes:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://localhost
-#  nginx:
-#    image: nginx:latest
-#    container_name: nginx
-#    restart: always
-#    network_mode: host
-#    ports:
-#    - 3000:80
-#    volumes:
-#    - /etc/localtime:/etc/localtime:ro
 
+  aspnet-sample:
+    image: mcr.microsoft.com/dotnet/samples:aspnetapp
+    container_name: aspnet-sample
+    restart: always
+    network_mode: bridge
+    ports:
+      - 5001:80
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    
