--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,15 +16,15 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
 
-  aspnet-sample:
-    image: mcr.microsoft.com/dotnet/samples:aspnetapp
-    container_name: aspnet-sample
-    restart: always
-    network_mode: bridge
-    ports:
-      - 5001:80
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    
+#  aspnet-sample:
+#    image: mcr.microsoft.com/dotnet/samples:aspnetapp
+#    container_name: aspnet-sample
+#    restart: always
+#    network_mode: bridge
+#    ports:
+#      - 5001:80
+#    volumes:
+#      - /etc/localtime:/etc/localtime:ro
+#    environment:
+#      - ASPNETCORE_ENVIRONMENT=Development
+#    
